# rust-temporal-demos

./: .gitignore  AGENTS.md  Makefile  Makefile-rust  Procfile  README-RUST.md  README.md  example-usage.md  run-tests.sh
food-ordering/: workflows.go
food-ordering-rust/: Cargo.toml  Makefile  README.md
food-ordering-rust/src/: activities.rs  constants.rs  lib.rs  types.rs  workflows.rs
food-ordering-rust/tests/: integration_tests.rs
iplocate-rust/: AGENTS.md  Cargo.toml  Makefile  Procfile
iplocate-rust/src/: activities.rs  lib.rs  types.rs  workflows.rs
iplocate-rust/tests/: README.md  advanced_integration_tests.rs  e2e_ephemeral_tests.rs  integration_tests.rs  sdk_best_practices_tests.rs
iplocate-rust/tests/fixtures/: golden_ips.json
schedule-payments-rust/: Cargo.toml  Makefile  README.md
schedule-payments-rust/src/: activities.rs  data.rs  lib.rs  workflows.rs
schedule-payments-rust/tests/: integration_tests.rs
