[package]
name = "schedule-payments-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
temporal-sdk = { path = "../sdk-core/sdk" }
temporal-sdk-core = { path = "../sdk-core/core" }
temporal-sdk-core-api = { path = "../sdk-core/core-api" }
temporal-client = { path = "../sdk-core/client" }
temporal-sdk-core-protos = { path = "../sdk-core/sdk-core-protos" }
url = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
